Fix page-header elements alignment
The page-header .caption and the menu links were not alignment.
This was caused by changing the font-weight and size of the caption.

--- a/pets/haddock/ocean.css
+++ b/pets/haddock/ocean.css
@@ -319,7 +319,7 @@ pre {
 #package-header .caption {
   color: white;
   font-style: normal;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: bold;
 }
 
